--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Starkville Adventures</h1>
-        <p>Explore Our Amazing Services and Experiences</p>
+        <h1>Welcome to Starkville Adventures Calculator</h1>
+        <p>lets create Amazing Services and Experiences</p>
     </header>
 
     <div class="container">
