--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Starkville Adventures Calculator</h1>
+        <h1>Welcome to Starkville Adventures Calculators </h1>
         <p>lets create Amazing Services and Experiences</p>
     </header>
 
